Updated HandBrake core to SVN 6430. Added Russian and Brazilian Portugese translations. Updated translated strings. Added ability to customize the preview folder location. Removed the single-instance restriction. Command-line and auto-play actions will apply to the first instance of VidCoder opened.
--HG--
branch : beta

--- a/VidCoder/View/Panels/PicturePanel.xaml
+++ b/VidCoder/View/Panels/PicturePanel.xaml
@@ -183,7 +183,7 @@
 				</Grid>
 
 				<StackPanel Orientation="Horizontal" Margin="4,10,0,0" VerticalAlignment="Top" HorizontalAlignment="Left">
-					<TextBlock Text="Scaling Algorithm:" VerticalAlignment="Center" Style="{StaticResource LongToolTipHolder}">
+					<TextBlock Text="{x:Static res:EncodingRes.ScalingAlgorithmLabel}" VerticalAlignment="Center" Style="{StaticResource LongToolTipHolder}">
 						<TextBlock.ToolTip>
 							<TextBlock Text="{x:Static res:EncodingRes.ScaleMethodToolTip}" Style="{StaticResource LongToolTip}" />
 						</TextBlock.ToolTip>
