More progress on pickers. Included DB upgrade, Picker model and Pickers utility class.

--- a/VidCoder/View/MainWindow.xaml
+++ b/VidCoder/View/MainWindow.xaml
@@ -398,7 +398,7 @@
                     IsEnabled="{Binding ProcessingVM.QueueHasItems}" />
                 <Separator />
                 <MenuItem
-                    Command="{Binding OpenOptionsCommand}"
+                    Command="{Binding WindowManagerVM.OpenOptionsCommand}"
                     Header="{x:Static res:MainRes.OptionsMenuItem}"
                     InputGestureText="F4" />
             </MenuItem>
